initial lazy image loading
i had to shift some stuff around, particularly prompting and openai api-related things. this will allow our code to be more easily added onto going forward.

--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -90,7 +90,7 @@
             <h3>Tile Information</h3>
             <p><strong>Position:</strong> (${data.x}, ${data.y})</p>
             <p><strong>Biome:</strong> ${data.biome}</p>
-            <p><strong>Picture:</strong> ${data.picture || 'None'}</p>
+            <p><strong>Picture:</strong> <img src='/tiles/get_image?x=${x}&y=${y}' /></p>
             <p><strong>Scene Description:</strong> ${data.scene_description || 'N/A'}</p>
             <p><strong>Treasure Description:</strong> ${data.treasure_description || 'N/A'}</p>
             <p><strong>Monster Description:</strong> ${data.monster_description || 'N/A'}</p>
