--- a/app/views/games/list.html.erb
+++ b/app/views/games/list.html.erb
@@ -14,6 +14,7 @@
       <tr>
         <th>Server Name</th>
         <th>Host</th>
+        <th>Capacity</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -22,6 +23,7 @@
         <tr>
           <td><%= game.name %></td>
           <td><%= game.user.username %></td>
+          <td><%= game.characters.count %>/<%= game.max_user_count %></td>
           <td>
             <%= button_to 'Add', add_game_path(game), method: :post, class: 'btn' %>
           </td>
