fixed text color on shop

--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -211,6 +211,13 @@
         padding: 20px;
         border-radius: 8px;
     }
+
+    .shop-container,
+    .shop-container h2,
+    .shop-container p,
+    .shop-container .buy-button {
+        color: black;
+    }
 </style>
 
 <script>
