--- a/app/views/admin/edit_user.html.erb
+++ b/app/views/admin/edit_user.html.erb
@@ -33,8 +33,14 @@
 
     <!-- Submit and Cancel Buttons -->
     <div class="form-group">
-      <%= submit_tag 'Update User', class: 'btn btn-primary' %>
-      <%= link_to 'Cancel', admin_path, class: 'btn btn-secondary' %>
+      <%= submit_tag 'Update User', class: 'btn' %>
+      <%= link_to 'Cancel', admin_path, class: 'btn' %>
     </div>
   <% end %>
+  <div class="form-group">
+    <%= form_tag delete_user_form_path, method: :delete do %>
+      <%= hidden_field_tag :id, @user.id %>
+      <%= submit_tag 'Delete User', class: 'btn', data: { confirm: 'Are you sure you want to delete this user?' } %>
+    <% end %>
+  </div>
 </div>
