I, Alex Lehman, made font changes and btn changes

--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -43,7 +43,7 @@
           <p class="text-with-border"><strong>Level:</strong> <%= item.level %></p>
           <p class="text-with-border"><strong>Type:</strong> <%= item.item_type %></p>
           <p class="text-with-border"><strong>Description:</strong> <%= item.description %></p>
-          <button class="delete-button text-with-border">Delete</button>
+          <button class="btn">Delete</button>
           <hr>
         </div>
       <% end %>
