--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<div class="game-container">
+<div class="game-container" style="font-family: 'Arial', sans-serif">
   <%= render 'shop' %>
   <%= render 'main' %>
   <%= render 'chat' %>
