--- a/app/views/games/_chat.html.erb
+++ b/app/views/games/_chat.html.erb
@@ -28,28 +28,46 @@
   <div class="chat-container">
     <h2>Chat</h2>
     <div class="chat-messages" id="chat-messages">
-      <% chat_messages = [
-        { user: 'Player1', content: 'Hey everyone!' },
-        { user: 'Player2', content: 'Hello! Ready to play?' },
-        { user: 'Player3', content: 'Good luck to all!' },
-        { user: 'Player4', content: 'Let’s win this game!' }
-      ] %>
-
-      <% chat_messages.each do |message| %>
-        <div class="chat-message">
-          <strong><%= message[:user] %>:</strong> <%= message[:content] %>
-        </div>
-      <% end %>
+      <div class="chat-message"><strong>Server:</strong> this is a test</div>
     </div>
-    <form id="chat-form">
-      <input type="text" id="chat-input" placeholder="Type your message..." autocomplete="off" />
-      <button type="submit">Send</button>
-    </form>
+    <%= form_tag chat_send_path, method: :poll do %>
+      <%= text_field_tag 'message', nil, required: true, class: 'chat-input' %>
+      <%= submit_tag 'Submit', class: 'btn' %>
+    <% end %>
   </div>
 </div>
 
 <script>
-    const currentCharacter = <%= raw @current_character.to_json %>
+    //const currentCharacter = <%= raw @current_character.to_json %>; ??????
+    let chatPoll;
+    updateChat()
+    //setInterval(() => {updateChat()}, 3000) //Re-poll the chat every 3 seconds (3000 ms)
+
+    async function updateChat() {
+        console.log("Chat being called!")
+        clearTimeout(chatPoll) //If this gets manually called, do not recall it while executing.
+        let response = (await fetch(`/chat`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRF-Token': csrfToken
+            },
+        }));
+        const chatLog = await (response.json())
+
+        const chatBox = document.getElementById('chat-messages')
+        chatBox.innerHTML = '' // Remove the old chat messages
+        console.log(chatLog)
+
+        for (const message of chatLog.chatLog) { // Create the new messages.
+            let newEntry = document.createElement('div')
+            newEntry.innerHTML = '<strong>'+message.user+':</strong> '+message.message
+            chatBox.appendChild(newEntry)
+        }
+
+        chatPoll = setTimeout(() => {updateChat()}, 3000) // Call myself again 3 seconds after the last time I have been called.
+    }
+
 </script>
 
 <style>
