Trying to Improve rendering

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,3 +3,10 @@
   <%= render 'main' %>
   <%= render 'chat' %>
 </div>
+
+<script>
+    document.addEventListener("partialsLoaded", () => {
+        initializeTabs();
+        initializeBuyButtons();
+    });
+</script>
